# drip

./: .gitignore  README.md  pyproject.toml
example/: some-coffee-maker.ttl  validate.py
ontology/: drip.ttl
shapes/: drip-shapes.ttl
tests/: test_validation.py  validate.py
